--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ backcall==0.1.0
 bleach==3.1.3
 cffi==1.14.0
 constantly==15.1.0
+crochet==1.12.0
 cryptography==2.8
 cssselect==1.1.0
 decorator==4.4.2
@@ -67,5 +68,6 @@ Twisted==20.3.0
 w3lib==1.21.0
 wcwidth==0.1.9
 webencodings==0.5.1
+wrapt==1.12.1
 zipp==3.1.0
 zope.interface==5.0.1
