--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,19 @@ attrs==19.3.0
 Automat==20.2.0
 backcall==0.1.0
 bleach==3.1.3
+blis==0.4.1
+catalogue==1.0.0
+certifi==2019.11.28
 cffi==1.14.0
+chardet==3.0.4
 constantly==15.1.0
 crochet==1.12.0
 cryptography==2.8
 cssselect==1.1.0
+cymem==2.0.3
 decorator==4.4.2
 defusedxml==0.6.0
+en-core-web-lg==2.2.5
 entrypoints==0.3
 hyperlink==19.0.0
 idna==2.9
@@ -29,6 +35,7 @@ jupyterlab-server==1.0.7
 lxml==4.5.0
 MarkupSafe==1.1.1
 mistune==0.8.4
+murmurhash==1.0.2
 nbconvert==5.6.1
 nbformat==5.0.4
 notebook==6.0.3
@@ -39,6 +46,8 @@ parsel==1.5.2
 parso==0.6.2
 pexpect==4.8.0
 pickleshare==0.7.5
+plac==1.1.3
+preshed==3.0.2
 prometheus-client==0.7.1
 prompt-toolkit==3.0.4
 Protego==0.1.16
@@ -55,17 +64,24 @@ python-dateutil==2.8.1
 pytz==2019.3
 pyzmq==19.0.0
 queuelib==1.5.0
+requests==2.23.0
 Scrapy==2.0.1
 Send2Trash==1.5.0
 service-identity==18.1.0
 six==1.14.0
+spacy==2.2.4
+srsly==1.0.2
 terminado==0.8.3
 testpath==0.4.4
+thinc==7.4.0
 torch==1.4.0
 tornado==6.0.4
+tqdm==4.43.0
 traitlets==4.3.3
 Twisted==20.3.0
+urllib3==1.25.8
 w3lib==1.21.0
+wasabi==0.6.0
 wcwidth==0.1.9
 webencodings==0.5.1
 wrapt==1.12.1
