--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ constantly==15.1.0
 crochet==1.12.0
 cryptography==2.8
 cssselect==1.1.0
+cycler==0.10.0
 cymem==2.0.3
 decorator==4.4.2
 defusedxml==0.6.0
@@ -20,7 +21,7 @@ entrypoints==0.3
 hyperlink==19.0.0
 idna==2.9
 importlib-metadata==1.5.0
-incremental==17.5.0
+incremental==17.5.0jup
 ipykernel==5.2.0
 ipython==7.13.0
 ipython-genutils==0.2.0
@@ -32,8 +33,10 @@ jupyter-client==6.1.0
 jupyter-core==4.6.3
 jupyterlab==2.0.1
 jupyterlab-server==1.0.7
+kiwisolver==1.1.0
 lxml==4.5.0
 MarkupSafe==1.1.1
+matplotlib==3.2.1
 mistune==0.8.4
 murmurhash==1.0.2
 nbconvert==5.6.1
@@ -47,6 +50,7 @@ parso==0.6.2
 pexpect==4.8.0
 pickleshare==0.7.5
 plac==1.1.3
+plotly==4.5.4
 preshed==3.0.2
 prometheus-client==0.7.1
 prompt-toolkit==3.0.4
@@ -59,13 +63,17 @@ PyDispatcher==2.0.5
 Pygments==2.6.1
 PyHamcrest==2.0.2
 pyOpenSSL==19.1.0
+pyparsing==2.4.6
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 pytz==2019.3
 pyzmq==19.0.0
 queuelib==1.5.0
 requests==2.23.0
+retrying==1.3.3
+scipy==1.4.1
 Scrapy==2.0.1
+seaborn==0.10.0
 Send2Trash==1.5.0
 service-identity==18.1.0
 six==1.14.0
