--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ appnope==0.1.0
 attrs==19.3.0
 Automat==20.2.0
 backcall==0.1.0
-bleach==3.1.3
+bleach==3.1.4
 blis==0.4.1
 catalogue==1.0.0
 certifi==2019.11.28
@@ -21,7 +21,7 @@ entrypoints==0.3
 hyperlink==19.0.0
 idna==2.9
 importlib-metadata==1.5.0
-incremental==17.5.0jup
+incremental==17.5.0
 ipykernel==5.2.0
 ipython==7.13.0
 ipython-genutils==0.2.0
