--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,39 @@
+aiohttp==3.6.2
 appnope==0.1.0
+async-timeout==3.0.1
 attrs==19.3.0
 Automat==20.2.0
 backcall==0.1.0
+beautifulsoup4==4.9.0
 bleach==3.1.4
 blis==0.4.1
 catalogue==1.0.0
 certifi==2019.11.28
 cffi==1.14.0
 chardet==3.0.4
+click==7.1.1
+click-plugins==1.1.1
+cligj==0.5.0
 constantly==15.1.0
 crochet==1.12.0
 cryptography==2.8
 cssselect==1.1.0
 cycler==0.10.0
 cymem==2.0.3
+dash==1.10.0
+dash-core-components==1.9.0
+dash-html-components==1.0.3
+dash-renderer==1.3.0
+dash-table==4.6.2
 decorator==4.4.2
 defusedxml==0.6.0
 en-core-web-lg==2.2.5
 entrypoints==0.3
+Fiona==1.8.13.post1
+Flask==1.1.2
+Flask-Compress==1.4.0
+future==0.18.2
+geopandas==0.7.0
 hyperlink==19.0.0
 idna==2.9
 importlib-metadata==1.5.0
@@ -25,19 +41,25 @@ incremental==17.5.0
 ipykernel==5.2.0
 ipython==7.13.0
 ipython-genutils==0.2.0
+ipywidgets==7.5.1
+itsdangerous==1.1.0
 jedi==0.16.0
 Jinja2==2.11.1
 json5==0.9.3
 jsonschema==3.2.0
 jupyter-client==6.1.0
 jupyter-core==4.6.3
+jupyter-server-proxy==1.3.2
 jupyterlab==2.0.1
+jupyterlab-dash==0.1.0a3
 jupyterlab-server==1.0.7
 kiwisolver==1.1.0
 lxml==4.5.0
 MarkupSafe==1.1.1
 matplotlib==3.2.1
 mistune==0.8.4
+multidict==4.7.5
+munch==2.5.0
 murmurhash==1.0.2
 nbconvert==5.6.1
 nbformat==5.0.4
@@ -51,10 +73,12 @@ pexpect==4.8.0
 pickleshare==0.7.5
 plac==1.1.3
 plotly==4.5.4
+plotly-geo==1.0.0
 preshed==3.0.2
 prometheus-client==0.7.1
 prompt-toolkit==3.0.4
 Protego==0.1.16
+psutil==5.7.0
 ptyprocess==0.6.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -64,7 +88,9 @@ Pygments==2.6.1
 PyHamcrest==2.0.2
 pyOpenSSL==19.1.0
 pyparsing==2.4.6
+pyproj==2.6.0
 pyrsistent==0.16.0
+pyshp==2.1.0
 python-dateutil==2.8.1
 pytz==2019.3
 pyzmq==19.0.0
@@ -76,7 +102,10 @@ Scrapy==2.0.1
 seaborn==0.10.0
 Send2Trash==1.5.0
 service-identity==18.1.0
+Shapely==1.7.0
+simpervisor==0.3
 six==1.14.0
+soupsieve==2.0
 spacy==2.2.4
 srsly==1.0.2
 terminado==0.8.3
@@ -92,6 +121,9 @@ w3lib==1.21.0
 wasabi==0.6.0
 wcwidth==0.1.9
 webencodings==0.5.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
 wrapt==1.12.1
+yarl==1.4.2
 zipp==3.1.0
 zope.interface==5.0.1
