--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ backcall==0.1.0
 beautifulsoup4==4.9.0
 bleach==3.1.4
 blis==0.4.1
+camelot-py==0.7.3
 catalogue==1.0.0
 certifi==2019.11.28
 cffi==1.14.0
@@ -14,10 +15,13 @@ chardet==3.0.4
 click==7.1.1
 click-plugins==1.1.1
 cligj==0.5.0
+colorlover==0.3.0
 constantly==15.1.0
 crochet==1.12.0
 cryptography==2.8
 cssselect==1.1.0
+cufflinks==0.17.3
+cv==1.0.0
 cycler==0.10.0
 cymem==2.0.3
 dash==1.10.0
@@ -27,8 +31,11 @@ dash-renderer==1.3.0
 dash-table==4.6.2
 decorator==4.4.2
 defusedxml==0.6.0
+distro==1.5.0
+Elixir==0.7.1
 en-core-web-lg==2.2.5
 entrypoints==0.3
+et-xmlfile==1.0.1
 Fiona==1.8.13.post1
 Flask==1.1.2
 Flask-Compress==1.4.0
@@ -43,16 +50,17 @@ ipython==7.13.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
 itsdangerous==1.1.0
+jdcal==1.4.1
 jedi==0.16.0
 Jinja2==2.11.1
 json5==0.9.3
 jsonschema==3.2.0
-jupyter-client==6.1.0
+jupyter-client==6.1.2
 jupyter-core==4.6.3
 jupyter-server-proxy==1.3.2
-jupyterlab==2.0.1
+jupyterlab==2.1.0
 jupyterlab-dash==0.1.0a3
-jupyterlab-server==1.0.7
+jupyterlab-server==1.1.0
 kiwisolver==1.1.0
 lxml==4.5.0
 MarkupSafe==1.1.1
@@ -62,17 +70,22 @@ multidict==4.7.5
 munch==2.5.0
 murmurhash==1.0.2
 nbconvert==5.6.1
-nbformat==5.0.4
+nbformat==5.0.5
 notebook==6.0.3
 numpy==1.18.2
+openpyxl==3.0.3
 pandas==1.0.3
 pandocfilters==1.4.2
 parsel==1.5.2
 parso==0.6.2
+patsy==0.5.1
+pbr==5.4.5
+pdfminer.six==20200402
+pdfquery==0.4.3
 pexpect==4.8.0
 pickleshare==0.7.5
 plac==1.1.3
-plotly==4.5.4
+plotly==4.6.0
 plotly-geo==1.0.0
 preshed==3.0.2
 prometheus-client==0.7.1
@@ -83,12 +96,15 @@ ptyprocess==0.6.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
+pycryptodome==3.9.7
 PyDispatcher==2.0.5
 Pygments==2.6.1
 PyHamcrest==2.0.2
 pyOpenSSL==19.1.0
 pyparsing==2.4.6
+PyPDF2==1.26.0
 pyproj==2.6.0
+pyquery==1.4.1
 pyrsistent==0.16.0
 pyshp==2.1.0
 python-dateutil==2.8.1
@@ -97,6 +113,7 @@ pyzmq==19.0.0
 queuelib==1.5.0
 requests==2.23.0
 retrying==1.3.3
+roman==3.2
 scipy==1.4.1
 Scrapy==2.0.1
 seaborn==0.10.0
@@ -105,9 +122,16 @@ service-identity==18.1.0
 Shapely==1.7.0
 simpervisor==0.3
 six==1.14.0
+sortedcontainers==2.1.0
 soupsieve==2.0
 spacy==2.2.4
+SQLAlchemy==0.7.10
+sqlalchemy-migrate==0.13.0
+sqlparse==0.3.1
 srsly==1.0.2
+statsmodels==0.11.1
+tabula-py==2.1.0
+Tempita==0.5.2
 terminado==0.8.3
 testpath==0.4.4
 thinc==7.4.0
@@ -124,6 +148,8 @@ webencodings==0.5.1
 Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 wrapt==1.12.1
+xlrd==0.7.1
+xlwt==0.7.2
 yarl==1.4.2
 zipp==3.1.0
 zope.interface==5.0.1
