--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ dash-renderer==1.3.0
 dash-table==4.6.2
 decorator==4.4.2
 defusedxml==0.6.0
+deprecation==2.0.7
 distro==1.5.0
 Elixir==0.7.1
 en-core-web-lg==2.2.5
@@ -39,6 +40,7 @@ et-xmlfile==1.0.1
 Fiona==1.8.13.post1
 Flask==1.1.2
 Flask-Compress==1.4.0
+frozendict==1.2
 future==0.18.2
 geopandas==0.7.0
 hyperlink==19.0.0
@@ -61,6 +63,7 @@ jupyter-server-proxy==1.3.2
 jupyterlab==2.1.0
 jupyterlab-dash==0.1.0a3
 jupyterlab-server==1.1.0
+keyring==21.2.0
 kiwisolver==1.1.0
 lxml==4.5.0
 MarkupSafe==1.1.1
@@ -74,7 +77,9 @@ nbformat==5.0.5
 notebook==6.0.3
 numpy==1.18.2
 openpyxl==3.0.3
+packaging==20.3
 pandas==1.0.3
+pandas-datareader==0.8.1
 pandocfilters==1.4.2
 parsel==1.5.2
 parso==0.6.2
@@ -84,6 +89,7 @@ pdfminer.six==20200402
 pdfquery==0.4.3
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==7.1.1
 plac==1.1.3
 plotly==4.6.0
 plotly-geo==1.0.0
@@ -98,6 +104,7 @@ pyasn1-modules==0.2.8
 pycparser==2.20
 pycryptodome==3.9.7
 PyDispatcher==2.0.5
+pyEX==0.2.1
 Pygments==2.6.1
 PyHamcrest==2.0.2
 pyOpenSSL==19.1.0
@@ -122,14 +129,17 @@ service-identity==18.1.0
 Shapely==1.7.0
 simpervisor==0.3
 six==1.14.0
+socketIO-client-nexus==0.7.6
 sortedcontainers==2.1.0
 soupsieve==2.0
 spacy==2.2.4
 sqlparse==0.3.1
 srsly==1.0.2
+sseclient==0.0.26
 statsmodels==0.11.1
 tabula-py==2.1.0
 Tempita==0.5.2
+temporal-cache==0.1.1
 terminado==0.8.3
 testpath==0.4.4
 thinc==7.4.0
@@ -138,11 +148,13 @@ tornado==6.0.4
 tqdm==4.43.0
 traitlets==4.3.3
 Twisted==20.3.0
+tzlocal==2.0.0
 urllib3==1.25.8
 w3lib==1.21.0
 wasabi==0.6.0
 wcwidth==0.1.9
 webencodings==0.5.1
+websocket-client==0.57.0
 Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 wrapt==1.12.1
